chore: proofreading PID article

--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -7,7 +7,7 @@ slug: "/pid"
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-[Persistent identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets or persons and allow to reliably locate, identify, and verify the references.
+[Persistent identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets, institutions, persons or analytical instrumentation, and allow to reliably locate, identify, and verify the references.
 
 The two main PIDs employed within the chemistry community are Digital Object Identifiers ([DOIs](https://www.doi.org/)) as PIDs for objects such as publications, datasets, or software as well as [Open Research and Contributor iDs](https://doi.org/10.1087/20120404) ([ORCID iDs](https://orchid.org/)) for people. Additionally, the [Research Organization Registry](https://doi.org/10.6087/kcse.192) ([ROR](https://ror.org/)) is used to identify research institutions. Current development also includes Persistent Identification of Instruments ([PIDINST](https://doi.org/10.5334/dsj-2020-018)) as PIDs for the instrumentation used to obtain research data. The [Persistent Identifiers for eResearch (ePIC)](https://www.pidconsortium.net/) is specifically designated for digital research data storage.
 
@@ -17,7 +17,7 @@ The main benefits of PIDs for chemistry researchers are increased findability, v
 
 <img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="2" hspace="20" />
 
-Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects, which are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised DOI registration agencies include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
+Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects, which are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised [DOI registration agencies](https://www.doi.org/the-community/existing-registration-agencies/) include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
 
 A DOI consists of a character string divided into two parts by a slash. The prefix always starts with a `10.` and identifies the registrant, who retrieves a DOI from a DOI registration agency. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. DOIs are most frequently displayed as an URL such as `https://doi.org/10.1000/182` and include a resolver as HTTP proxy server to redirect to the linked object. DOIs are standardised by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html).
 
