fix: PID article, ePID

--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -17,7 +17,7 @@ The main benefits of PIDs for chemistry researchers are increased findability, v
 
 <img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="2" hspace="20" />
 
-Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects. DOIs are resolved based on the [Handle System](https://www.handle.net/) and are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised [DOI registration agencies](https://www.doi.org/the-community/existing-registration-agencies/) include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
+Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects. DOIs are resolved based on the [Handle System](https://www.handle.net/)to lead to the corresponding landing page and are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised [DOI registration agencies](https://www.doi.org/the-community/existing-registration-agencies/) include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
 
 A DOI consists of a character string divided into two parts by a slash. The prefix always starts with a `10.` and identifies the registrant, who retrieves a DOI from a DOI registration agency. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. 
 
@@ -52,9 +52,9 @@ In addition to ORCID iDs as non-proprietary PIDs for authors, there are also pro
 
 <img align="left" src={useBaseUrl("/img/topics/ePIC-head.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
 
-The Persistent Identifier for eResearch ([ePICs](https://www.pidconsortium.net/)) are based on the [Handle.Net Registry (HNR)](https://www.handle.net/) system and are intended to be used for unpublished digital research objects, while [DOIs](#dois) are intended for published objects. To this end, ePICs can be assigned at early stages of research to locate research data and may be used by various research data management or archiving systems. Upon publication of a dataset, the full research data can be linked via the ePIC, for example, in cases that include proprietary or sensitive information. 
+The Persistent Identifier for eResearch ([ePICs](https://www.pidconsortium.net/)) are based on the [Handle.Net Registry (HNR)](https://www.handle.net/) and are intended to be used for unpublished digital research objects. To this end, ePICs can be assigned at early stages of research to locate research data and may be used by various research data management or archiving systems. Upon publication of a dataset, the full research data can be linked via the ePIC, for example, in cases that include proprietary or sensitive information. 
 
-This type of PID will commonly lead to a landing page, the content of which is maintained by the PID owner. Examples here include the dataset's metadata or a method of contacting those responsible for the dataset.
+This type of PID will commonly lead to a landing page, the content of which is maintained by the PID owner and includes the dataset's metadata or a method of contacting those responsible for the dataset.
 
 ## Sources and further information
 
