fix: links in PID article

--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -9,7 +9,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 [Persistent identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets, institutions, persons or analytical instrumentation, and allow to reliably locate, identify, and verify the references.
 
-The two main PIDs employed within the chemistry community are Digital Object Identifiers ([DOIs](https://www.doi.org/)) as PIDs for objects such as publications, datasets, or software as well as [Open Research and Contributor iDs](https://doi.org/10.1087/20120404) ([ORCID iDs](https://orchid.org/)) for people. Additionally, the [Research Organization Registry](https://doi.org/10.6087/kcse.192) ([ROR](https://ror.org/)) is used to identify research institutions. Current development also includes Persistent Identification of Instruments ([PIDINST](https://doi.org/10.5334/dsj-2020-018)) as PIDs for the instrumentation used to obtain research data. The [Persistent Identifiers for eResearch (ePIC)](https://www.pidconsortium.net/) is specifically designated for digital research data storage.
+The two main PIDs employed within the chemistry community are Digital Object Identifiers ([DOIs](https://www.doi.org/)) as PIDs for objects such as publications, datasets, or software as well as [Open Research and Contributor iDs](https://doi.org/10.1087/20120404) ([ORCID iDs](https://orchid.org/)) for people. Additionally, the [Research Organization Registry](https://doi.org/10.6087/kcse.192) ([ROR](https://ror.org/)) is used to identify research institutions. Current development also includes [Persistent Identification of Instruments](https://doi.org/10.5334/dsj-2020-018) ([PIDINST](https://docs.pidinst.org/)) as PIDs for the instrumentation used to obtain research data. The Persistent Identifiers for eResearch ([ePIC](https://www.pidconsortium.net/)) is specifically designated for digital research data storage.
 
 The main benefits of PIDs for chemistry researchers are increased findability, visibility, and ease of access of their scientific work. In the context of research data, PIDs are especially useful to interconnect publications and datasets in repositories.
 
