--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -15,7 +15,7 @@ The main benefits of PIDs for chemistry researchers are increased findability, v
 
 ## DOIs
 
-<img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="2" hspace="20" />
+<img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="15" hspace="20" />
 
 Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects. DOIs are resolved based on the [Handle System](https://www.handle.net/)to lead to the corresponding landing page and are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised [DOI registration agencies](https://www.doi.org/the-community/existing-registration-agencies/) include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
 
@@ -37,7 +37,7 @@ Registrants are [liable](https://support.datacite.org/docs/doi-registration-poli
 
 ## ORCID iDs
 
-<img align="left" src={useBaseUrl("/img/topics/ORCIDiD_iconvector.svg")} width="80" alt="ORCiD logo" vspace="12" hspace="20" />
+<img align="left" src={useBaseUrl("/img/topics/ORCIDiD_iconvector.svg")} width="80" alt="ORCiD logo" vspace="30" hspace="20" />
 
 [ORCID iDs](https://orchid.org/) are open and non-proprietary PIDs for authors also described as unique author identifiers and can be retrieved and used by any author free of charge. They are provided by the non-profit organization ORCID Inc., formerly called Open Research and Contributors ID organisation, and sustained by fees of member organisations, providing extended application program interfaces (API) for their members to integrate ORCID services.
 
@@ -47,8 +47,17 @@ The [ORCID record](https://doi.org/10.1038/462825a) connected to ORCID iDs inclu
 
 In addition to ORCID iDs as non-proprietary PIDs for authors, there are also proprietary author identifiers such as Thomson Reuters’ [Web of Science ResearcherID](https://www.researcherid.com/#rid-for-researchers) and Elsevier’s [Scopus Author ID](https://www.scopus.com/freelookup/form/author.uri).
 
+## Resarch Organisation Registry
+
+<img align="left" src={useBaseUrl('/img/topics/ROR_logo.svg')} width="80" alt="ROR logo CC BY 4.0" vspace="30" hspace="20" />
+
+The Research Organisation Registry ([ROR](https://ror.org/)) provides persistent identifiers for research organisations, while names might not be unique, may change and organisations might be merged, split, shut down or re-emerge. ROR enables to connect research organisations to research outputs and their researchers by identifying their affiliations. 
+
+ROR should be provided in affiliations of researchers in scientific publications as well as for data publications. 
+
+ROR does support parent-child hierarchies as well as lateral relationships between organisations. An example might include a university having a child organisation such as a research institute [German: Fakultät] and related organisations such as a university hospital. However, ROR focuses on fundamental affiliations and is not focused on all subdivisions of an organisations such as departments [German: Institut] as high-level institutional information is more stable.
+
 ## ePICs
-<!--![ePIC Header](../../static/img/topics/EPIC-header_transparent.png)-->
 
 <img align="left" src={useBaseUrl("/img/topics/ePIC-head.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
 
