fix: identifiers, first draft

--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Persistent Identifiers (PIDs)"
+title: "Persistent Identifiers"
 slug: "/pid"
 ---
 
-# Persistent Identifiers (PIDs)
-
 import useBaseUrl from '@docusaurus/useBaseUrl';
+
+# Persistent Identifiers (PIDs)
 
 [Persistent identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets, institutions, persons or analytical instrumentation, and allow to reliably locate, identify, and verify the references.
 
