--- a/docs/60_topics/61_identifiers/30_cas_rn.mdx
+++ b/docs/60_topics/61_identifiers/30_cas_rn.mdx
@@ -1,11 +1,11 @@
 ---
-title: "International Chemical Identifier (InChI)"
-slug: "/inchi"
+title: "CAS Registry Number"
+slug: "/cas_rn"
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-# International Chemical Identifier
+# CAS Registry Number
 
 ![Under Construction](/img/Constr_2bl.png)
 
