--- a/docs/60_topics/61_identifiers/00_identifiers.mdx
+++ b/docs/60_topics/61_identifiers/00_identifiers.mdx
@@ -6,14 +6,20 @@ id: "identifiers"
 
 # Identifiers
 
-Identifiers are typically unique codes aimed to identify something in the material or digital space. For example, a research group may have a fixed naming method for identifying samples within their projects. A further example in chemistry is the [Chemical Abstracts Service (CAS) Registry Number](https://www.cas.org/solutions/cas-custom-services/cas-registry-services), a unique identifier assigned to each chemical substance that is indexed in the [CAS database](https://www.cas.org/support/documentation/cas-databases). CAS numbers are widely used in chemical literature and databases, and they are recognized as an international standard.
+Identifiers are unique strings aimed to identify resources. 
 
+In research data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/), [ORCID iDs](https://www.orcid.org/) and the Research Organisation Registry ([ROR](https://www.ror.org/)) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories) and researchers with their affiliation.
 
-In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems typically also use an identifier system. Specific to chemistry, [InChI](/docs/inchi) codes serve as a machine-readable identifier for chemical substances.
+[Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems typically also use an identifier system. Specific to chemistry, [InChI](/docs/inchi) codes serve as a machine-readable identifier for chemical structures. A further example in chemistry is the [CAS Registry Number](https://www.cas.org/solutions/cas-custom-services/cas-registry-services), a proprietary unique identifier assigned to each chemical substance that is indexed in the proprietary [CAS database](https://www.cas.org/support/documentation/cas-databases). CAS numbers are widely used in chemical literature and databases, and they are recognized as an international standard.
 
-In terms of the [FAIR data principles](docs/fair), identifiers should be machine-readable and help interlink related data. For example, referring to the DOI of the associated published journal article in a datasets metadata helps describe and lend context to the data. 
+In terms of the [FAIR data principles](docs/fair), identifiers should interlink scientific publications with their corresponding related dataset(s). For example, referring to the DOI of the associated published journal article in a datasets metadata via a related Identifier helps to describe and lend context to the data. Please see the [Best Practice article](/docs/best_practice) for further details.
+
+Symbols are close relatives to identifiers, but while identifiers require a dubbing process, such as a resolver for PIDs, symbols apply in a more general sense as a mark to represent another entity.
 
 ## Sources and further information
 
-- [The InChI Code](https://doi.org/10.1021/acs.jchemed.8b00090)
 - German: [Forschungsdaten.info: Persistente Identifikatoren](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
+- [The InChI Code](https://doi.org/10.1021/acs.jchemed.8b00090)
+
+----
+Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
