feat: ref 15_provenance

--- a/docs/60_topics/63_data_description_annotation/15_provenance.mdx
+++ b/docs/60_topics/63_data_description_annotation/15_provenance.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Provenance Information"
+title: "Data Provenance Information"
 slug: "/provenance"
 ---
 
@@ -7,3 +7,8 @@ slug: "/provenance"
 ![Under Construction](/img/Constr_2bl.png)
 
 This article is under construction.
+
+
+## Sources and further information
+
+- German: [Erklärt! Daten-Provenienz](https://www.eresearch.uni-goettingen.de/de/knowledge-base/explain-data/explain-data-provenance/)
