feat: dda article

--- a/docs/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
+++ b/docs/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
@@ -10,4 +10,9 @@ To best understand a dataset at hand, whether it be for yourself, your working g
 
 Data description involves providing a detailed overview of the data, including its characteristics, format, structure, and any relevant context. Research data annotation is the process of adding labels or notes to data to make it more easily understandable and accessible for analysis. In using rich machine-readable [metadata](docs/metadata), data annotation and description allows both humans and machines to make informed decisions about the suitability of the data for their research.
 
-Furthermore, metadata used for either data description or annotation can be semantically described, employing controlled vocabularies, or better yet, [ontologies](/docs/ontology) to reduce ambiguity, making them machine-readable and machine-*understandable*. This facilitates searching and also finding datasets for machines and humans alike.
+Another aspect to consider is allow for data reuse is [data provenance](/docs/provenance), which can be part of the metadata. In the context of scientific data and data management, provenance means the documentation of where data material comes from and with which processes and methods it was produced. Hence, the concept of provenance is about trust, credibility and reproducibility of research and may include information such as creation date, persons creating, instruments used, software used and data processing methods applied.   
+
+Furthermore, metadata used for either data description or annotation can be semantically described, employing controlled vocabularies, or better yet, [ontologies](/docs/ontology) to reduce ambiguity, making them machine-readable and machine-*understandable*. This facilitates searching and also enhances the findability of datasets for machines and humans alike.
+
+----
+Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
