chore: another proofreading of intro article

--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -50,7 +50,7 @@ The role pages focus on the motivation for role-specific requirements and answer
 
 ### Handling data
 
-The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Moreover, aspects on data storage and archiving are also covered. Find a detailed description of the following aspects:
+The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Moreover, aspects on data storage and archiving are also covered.
 
 <IntroButton url={"/docs/data_guide/"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Handling Data"} />
 
@@ -62,6 +62,6 @@ To enable fully digital workflows in chemistry, the development and provision of
 
 ### Data Publication
 
-In the category of data publication you will find all the important information on the topic of publishing data. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.  
+In the category of data publication you will find all the important information on the topic of data publication. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.  
 
 <IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
