--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -6,7 +6,7 @@ slug: "/fair"
 
 ![FAIR Data](/img/topics/FAIR_data_principles.png)
 
-Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
+Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0).
 
 ## Introduction
 
@@ -17,9 +17,12 @@ Keeping in mind the long-term goal of making scientific data reusable to others 
 
 Reusing well-curated research data, makes researchers’ tasks easier, enabling them to build upon previous research. Furthermore, data reuse has the potential for large stores of data to be mined for machine-learning applications. For example, large amounts of chemical synthesis data could lead to the virtual development of new synthesis methods or the discovery of new compounds.
 
-In chemistry, the deposition of crystallographic data in a standardized file format ([CIF](https://www.iucr.org/resources/cif/spec/version1.1/cifsyntax)) into a repository such as the [Cambridge Crystallographic Data Centre](https://www.ccdc.cam.ac.uk/) (CCDC), required by many leading journals in the chemical community, is the primary example of the FAIR Data Principles in action. To broaden the scope of such standards, [NFDI4Chem](https://www.nfdi4chem.de/) is working towards creating an infrastructure for FAIR data in Germany while training researchers in using the available infrastructure to ensure their data is as FAIR as can be.
+:::info Info:  
+In chemistry, the deposition of crystallographic data in a standardized file format ([CIF](https://www.iucr.org/resources/cif/spec/version1.1/cifsyntax)) into a repository such as the [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/) (CSD) with the Cambridge Crystallographic Data Centre (CCDC), required by many leading journals in the chemical community, is the primary example of the FAIR Data Principles in action. To broaden the scope of such standards, [NFDI4Chem](https://www.nfdi4chem.de/) is working towards creating an infrastructure for FAIR data in Germany while training researchers in using the available infrastructure to ensure their data is as FAIR as can be.
+:::
 
 In the following, we answer the questions: What makes data FAIR? What do researchers and those who provide data preservation services need to consider?
+
 
 ## Findable
 
