chore: proofreading FAIR

--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -18,7 +18,7 @@ Keeping in mind the long-term goal of making scientific data reusable to others 
 Reusing well-curated research data, makes researchers’ tasks easier, enabling them to build upon previous research. Furthermore, data reuse has the potential for large stores of data to be mined for machine-learning applications. For example, large amounts of chemical synthesis data could lead to the virtual development of new synthesis methods or the discovery of new compounds.
 
 :::info Info:  
-In chemistry, the deposition of crystallographic data in a standardized file format ([CIF](https://www.iucr.org/resources/cif/spec/version1.1/cifsyntax)) into a repository such as the [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/) (CSD) with the Cambridge Crystallographic Data Centre (CCDC), required by many leading journals in the chemical community, is the primary example of the FAIR Data Principles in action. To broaden the scope of such standards, [NFDI4Chem](https://www.nfdi4chem.de/) is working towards creating an infrastructure for FAIR data in Germany while training researchers in using the available infrastructure to ensure their data is as FAIR as can be.
+In chemistry, the deposition of crystallographic data in a standardized file format ([CIF](https://www.iucr.org/resources/cif/spec/version1.1/cifsyntax)) into a repository such as the [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/) (CSD) with the Cambridge Crystallographic Data Centre (CCDC) or the [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/) (ICSD) with FIZ Karlsruhe, required by many leading journals in the chemical community, is the primary example of the FAIR Data Principles in action. To broaden the scope of such standards, [NFDI4Chem](https://www.nfdi4chem.de/) is working towards creating an infrastructure for FAIR data in Germany while training researchers in using the available infrastructure to ensure their data is as FAIR as can be.
 :::
 
 In the following, we answer the questions: What makes data FAIR? What do researchers and those who provide data preservation services need to consider?
@@ -44,7 +44,7 @@ Data need to be sufficiently described in order to make them both findable and r
 - what other data may be related (linked via its PID), and
 - associated journal publications and their DOI.
 
-Repositories should provide researchers with a fillable [application profile](https://en.wikipedia.org/wiki/Application_profile) that allows researchers to give extensive and precise information on their deposited datasets. For example, the Chemotion Repository uses, among others, the [Datacite Metadata Schema 4.0](http://doi.org/10.5438/0012) to build its application profile, a schema specifically created for the publication and citation of research data. [RADAR](https://radar.products.fiz-karlsruhe.de/en), including the variant [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/), has also built [its metadata schema](https://radar.products.fiz-karlsruhe.de/en/radarfeatures/radar-metadatenschema) on Datacite. These include an assortment of mandatory, recommended, and optional metadata properties, allowing for a rich description of the deposited dataset. For those publishing data, always keep in mind: the more information provided, the better.
+Repositories should provide researchers with a fillable [application profile](https://en.wikipedia.org/wiki/Application_profile) that allows researchers to give extensive and precise information on their deposited datasets. For example, the Chemotion Repository uses, among others, the [Datacite Metadata Schema](http://doi.org/10.5438/0012) to build its application profile, a schema specifically created for the publication and citation of research data. [RADAR](https://radar.products.fiz-karlsruhe.de/en), including the variant [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/), has also built [its metadata schema](https://radar.products.fiz-karlsruhe.de/en/radarfeatures/radar-metadatenschema) on Datacite. These include an assortment of mandatory, recommended, and optional metadata properties, allowing for a rich description of the deposited dataset. For those publishing data, always keep in mind: the more information provided, the better.
 
 ### F3. metadata clearly and explicitly include the identifier of the data it describes
 
