feat: linked license article in FAIR

--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -118,13 +118,13 @@ Related to [F2](#f2-data-are-described-with-rich-metadata-defined-by-r1-below) a
 - Any limitations to the data
 - Software and versions used for acquisition and processing.
 
-An important piece of information for chemical data is a [machine-readable chemical structures](/docs/machine-readable_chemical_structures). This should be included within the dataset and/or metadata and aids computers in finding the correct data in their queries.
+An important piece of information for chemical data are [machine-readable chemical structures](/docs/machine-readable_chemical_structures). This should be included within the dataset and/or metadata and aids computers in finding the correct data in their queries.
 
 Repositories should provide data publishers with the opportunity to include a plurality of information in their metadata. This includes giving a wide range of optional and free-fill fields for data publishers to complete.
 
 #### R1.1. (meta)data are released with a clear and accessible data usage license
 
-The metadata should include human and machine-readable use conditions, such as a license. [Creative Commons](https://creativecommons.org/) licenses are commonly used for scientific data and this [license selection tool](https://creativecommons.org/choose/) can help researchers assign a license that fits their needs. [re3data](https://www.re3data.org/) lists whether a repository allows researchers to directly select a license or terms of use agreement when depositing data. At a minimum, repositories should allow researchers to add a license file.
+The metadata should include human and machine-readable use conditions, such as a [license](/docs/licenses). [Creative Commons](https://creativecommons.org/) licenses are commonly used for scientific data. [re3data](https://www.re3data.org/) lists whether a repository allows researchers to directly select a license or terms of use agreement when depositing data. At a minimum, repositories should allow researchers to add a license file.
 
 #### R1.2. (meta)data are associated with detailed provenance
 
