--- a/docs/50_data_publication/25_licenses.mdx
+++ b/docs/50_data_publication/25_licenses.mdx
@@ -1,9 +1,12 @@
 ---
-title: "Licences"
-slug: "/licences"
+title: "Licenses"
+slug: "/licenses"
 ---
 
 
 ![Under Construction](/img/Constr_2bl.png)
+
+<!-- Copied from FAIR Article. This article is now linked from there. Please consider for this article. [Creative Commons](https://creativecommons.org/) licenses are commonly used for scientific data and this [license selection tool](https://creativecommons.org/choose/) can help researchers assign a license that fits their needs.-->
+
 
 This article is under construction.
